implement infinite scroll

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <section class="section">
     <div class="container">
-      <nav class="navbar is-fixed-top is-primary">
+      <nav class="navbar is-fixed-top is-primary has-shadow">
         <div class="navbar-start">
           <div class="navbar-item has-navbar-fixed-top">
       <input class="input" id="movie-field">
