--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="navbar is-fixed-top is-primary has-shadow">
         <div class="navbar-start">
           <div class="navbar-item has-navbar-fixed-top">
-      <input class="input" id="movie-field">
+      <input class="input" id="movie-field" placeholder="Search a movie...">
     </div>
     </div>
     <div class="navbar-end">
