--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     </div>
     </nav>
-      <ul id="movie-list" class="xcentered is-multiline">
+      <ul id="movie-list" class="xcentered">
       </ul>
     </div>
   </section>
