--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
       </ul>
     </div>
   </section>
-  <script src="https://cdn.polyfill.io/v2/polyfill.js"></script>
-  <script src="https://jspm.io/system@0.19.js"></script>
-  <script>
-    System.config({ transpiler: 'babel'})
-    System.import("./main.js")
-  </script>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
